<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context="nanodegree.mal.udacity.android.attendenceapp.RegisterActivity"
>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/indiago"
    >
    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/splashico2"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etxt_register_name"
        android:inputType="textCapWords"
        android:ems="10"
        android:hint="@string/etxt_register_name"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="12sp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etxt_register_companyname"
        android:inputType="textCapWords"
        android:ems="10"
        android:hint="@string/etxt_register_companyname"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="12sp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_register_CompanyLocation"
            android:text="@string/txt_register_CompanyLocation"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginLeft="15dp"
            android:layout_alignBaseline="@+id/etxt_register_latitude"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etxt_register_latitude"
        android:inputType="numberDecimal"
        android:ems="5"
        android:hint="@string/etxt_register_latitude"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_toRightOf="@+id/txt_register_CompanyLocation"
        android:textSize="12sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etxt_register_longitude"
        android:inputType="numberDecimal"
        android:ems="5"
        android:hint="@string/etxt_register_longitude"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_toRightOf="@+id/etxt_register_latitude"
        android:textSize="12sp"/>

    </RelativeLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chbox_register_incompany"
        android:text="@string/chbox_register_incompany"
        android:textColor="@color/white"
        android:layout_marginLeft="70dp"
        android:textSize="13sp"
        android:textColorLink="@color/white"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_register_worktime"
            android:id="@+id/txt_register_worktime"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginLeft="15dp"
            android:layout_alignBaseline="@+id/etxt_register_timefrom"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etxt_register_timefrom"
        android:inputType="number"
        android:ems="5"
        android:hint="@string/etxt_register_timefrom"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_toRightOf="@+id/txt_register_worktime"
        android:textSize="12sp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etxt_register_timeto"
            android:inputType="number"
            android:ems="5"
            android:hint="@string/etxt_register_timeto"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:gravity="center"
            android:layout_toRightOf="@+id/etxt_register_timefrom"
            android:textSize="12sp"/>

    </RelativeLayout>

   <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/btn_register_holiday"
       android:id="@+id/btn_register_holiday"
       android:layout_gravity="center"
       android:background="@android:color/transparent"
       android:textColor="@color/white"
       android:textSize="12sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register_save"
        android:id="@+id/btn_register_save"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_border"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"/>

</LinearLayout>
</ScrollView>